tests/specs/run/event_listener_error/event_listener_error.ts
addEventListener("foo", () => {
  throw new Error("bar");
});
console.log(1);
dispatchEvent(new CustomEvent("foo"));
console.log(2);
